fixes issues raised by Malte in the last PR

--- a/1 - identify organisations in the corpus/explore_ner_results.ipynb
+++ b/1 - identify organisations in the corpus/explore_ner_results.ipynb
@@ -26,7 +26,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv('../data-files/master-ner-results.csv')\n",
+    "from pathlib import Path\n",
+    "\n",
+    "path = Path(os.getcwd())\n",
+    "data_dir = os.path.join(path.parents[0], \"data-files\")\n",
+    "\n",
+    "df = pd.read_csv(os.path.join(data_dir, \"master-ner-results.csv\"))\n",
     "# drop rows in NaN values\n",
     "df = df.dropna()\n",
     "# remove unnecessary punctuation in entities\n",
@@ -37,7 +42,7 @@
     "df['entity'] = df['entity'].str.replace('()','', regex=False)\n",
     "df['entity'] = df['entity'].str.replace('–-','')\n",
     "# extend the number of dataframe rows pandas can display\n",
-    "pd.set_option('display.max_rows', 600)"
+    "pd.set_option('display.max_rows', 600)\n"
    ]
   },
   {
