--- a/1 - identify organisations in the corpus/gather_texts.ipynb
+++ b/1 - identify organisations in the corpus/gather_texts.ipynb
@@ -20,17 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "778281bd-dee0-4da4-abfd-fc695862a751",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "f = open('../data-files/studies_on_water_scraped.json')\n",
-    "documents = json.load(f)\n",
-    "    \n",
-    "f.close()"
+    "path = Path(os.getcwd())\n",
+    "data_dir = os.path.join(path.parents[0], \"data-files\")\n",
+    "with open(os.path.join(data_dir, \"studies_on_water_scraped.json\")) as f:\n",
+    "    documents = json.load(f)"
    ]
   },
   {
@@ -68,7 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "813b6b83-81c6-4213-941b-a5392b1e0ad4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "32ad7358-c6a8-4f2f-b3c0-2620dc5e1d35",
    "metadata": {},
    "outputs": [],
@@ -148,8 +158,18 @@
     "                                section_text = section_text + tmpline\n",
     "                            else:\n",
     "                                section_text = section_text + line\n",
-    "                with open('../data-files/unprocessed/'+section+\"/\"+str(index)+'.txt', 'w') as f:\n",
-    "                    f.write(section_text)\n",
+    "                                \n",
+    "                # Check whether 'unprocessed/' directory exists\n",
+    "                upPath = os.path.join(data_dir, \"unprocessed\")\n",
+    "                sPath = os.path.join(upPath, section)\n",
+    "                upExist = os.path.exists(upPath)\n",
+    "                spExist = os.path.exists(sPath)\n",
+    "                if not upExist:\n",
+    "                    os.makedirs(upPath)\n",
+    "                if not spExist:\n",
+    "                    os.makedirs(sPath)\n",
+    "                with open(os.path.join(sPath, str(index)+\".txt\"), 'w', encoding='utf-8') as f:\n",
+    "                    f.write(section_text)             \n",
     "        index = index + 1\n",
     "    \n",
     "# generate_docs(\"foreword\")\n",
@@ -170,20 +190,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "0d2bd0d3-1820-42fb-86a7-402bb9635ee1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# collect data\n",
-    "ack_dir = '../data-files/unprocessed/acknowledgements/'\n",
-    "body_dir = '../data-files/unprocessed/body/'\n",
-    "summary_dir = '../data-files/unprocessed/summary/'\n",
-    "foreword_dir = '../data-files/unprocessed/foreword/'\n",
+    "ack_dir = os.path.join(os.path.join(data_dir, \"unprocessed\"), \"acknowledgements\")\n",
+    "body_dir = os.path.join(os.path.join(data_dir, \"unprocessed\"), \"body\")\n",
+    "summary_dir = os.path.join(os.path.join(data_dir, \"unprocessed\"), \"summary\")\n",
+    "foreword_dir = os.path.join(os.path.join(data_dir, \"unprocessed\"), \"foreword\")\n",
     "\n",
     "import json\n",
     "\n",
     "def gather_data():\n",
+    "    global data_dir\n",
     "    result = {}\n",
     "#     for filename in os.listdir(foreword_dir):\n",
     "#         f = os.path.join(foreword_dir, filename)\n",
@@ -215,19 +236,24 @@
     "        if (os.path.isfile(f) and (\".DS_Store\" not in f)):\n",
     "            with open(f, 'r', encoding=\"utf8\") as fp:\n",
     "                currentfiledata = fp.read()\n",
+    "\n",
+    "            result[f.replace(body_dir, \"\").replace(\".txt\", \"\").replace(\"/\",\"\")] = currentfiledata\n",
     "                \n",
-    "            addon = currentfiledata.replace(\"format title author subject keywords creator producer creationDate modDate trapped encryption id Preface\", \"\")\n",
-    "            addon = addon.replace(\"format title author subject keywords creator producer creationDate modDate trapped encryption id\", \"\")\n",
-    "            result[f.replace(body_dir, \"\").replace(\".txt\", \"\")] = addon\n",
-    "                \n",
-    "    with open(\"data.json\", \"w\") as outfile:\n",
+    "    with open(os.path.join(data_dir, \"data.json\"), \"w\") as outfile:\n",
     "        json.dump(result, outfile)\n",
     "\n",
-    "import os\n",
     "# invoke the method above, generates a 'data.json' file containing the plain text documents\n",
     "# the keys of the json file are the IDs of the documents as indicated in the input JSON file\n",
     "gather_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5a63bb1-e5ea-42b1-8275-4fc44dc002e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
