--- a/1 - identify organisations in the corpus/ner_flair.ipynb
+++ b/1 - identify organisations in the corpus/ner_flair.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "d5e621fa-4d0e-43e0-9566-5a7d4336bf20",
    "metadata": {},
    "outputs": [
@@ -42,8 +42,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-10-20 09:47:30,602 loading file /Users/kodymoodley/.flair/models/ner-english-ontonotes-large/2da6c2cdd76e59113033adf670340bfd820f0301ae2e39204d67ba2dc276cc28.ec1bdb304b6c66111532c3b1fc6e522460ae73f1901848a4d0362cdf9760edb1\n",
-      "2022-10-20 09:47:53,919 SequenceTagger predicts: Dictionary with 76 tags: <unk>, O, B-CARDINAL, E-CARDINAL, S-PERSON, S-CARDINAL, S-PRODUCT, B-PRODUCT, I-PRODUCT, E-PRODUCT, B-WORK_OF_ART, I-WORK_OF_ART, E-WORK_OF_ART, B-PERSON, E-PERSON, S-GPE, B-DATE, I-DATE, E-DATE, S-ORDINAL, S-LANGUAGE, I-PERSON, S-EVENT, S-DATE, B-QUANTITY, E-QUANTITY, S-TIME, B-TIME, I-TIME, E-TIME, B-GPE, E-GPE, S-ORG, I-GPE, S-NORP, B-FAC, I-FAC, E-FAC, B-NORP, E-NORP, S-PERCENT, B-ORG, E-ORG, B-LANGUAGE, E-LANGUAGE, I-CARDINAL, I-ORG, S-WORK_OF_ART, I-QUANTITY, B-MONEY\n"
+      "2022-10-25 18:22:09,557 loading file /Users/kodymoodley/.flair/models/ner-english-ontonotes-large/2da6c2cdd76e59113033adf670340bfd820f0301ae2e39204d67ba2dc276cc28.ec1bdb304b6c66111532c3b1fc6e522460ae73f1901848a4d0362cdf9760edb1\n",
+      "2022-10-25 18:22:38,576 SequenceTagger predicts: Dictionary with 76 tags: <unk>, O, B-CARDINAL, E-CARDINAL, S-PERSON, S-CARDINAL, S-PRODUCT, B-PRODUCT, I-PRODUCT, E-PRODUCT, B-WORK_OF_ART, I-WORK_OF_ART, E-WORK_OF_ART, B-PERSON, E-PERSON, S-GPE, B-DATE, I-DATE, E-DATE, S-ORDINAL, S-LANGUAGE, I-PERSON, S-EVENT, S-DATE, B-QUANTITY, E-QUANTITY, S-TIME, B-TIME, I-TIME, E-TIME, B-GPE, E-GPE, S-ORG, I-GPE, S-NORP, B-FAC, I-FAC, E-FAC, B-NORP, E-NORP, S-PERCENT, B-ORG, E-ORG, B-LANGUAGE, E-LANGUAGE, I-CARDINAL, I-ORG, S-WORK_OF_ART, I-QUANTITY, B-MONEY\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "id": "0cdc4deb-295f-4102-9e07-be484b90a62f",
    "metadata": {
     "id": "0cdc4deb-295f-4102-9e07-be484b90a62f"
@@ -89,13 +89,18 @@
    "outputs": [],
    "source": [
     "import json\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
     "# get data (full texts of documents including acknowledgements, foreword, executive summary and body)\n",
-    "f = open('data.json')\n",
-    "data = json.load(f)\n",
+    "path = Path(os.getcwd())\n",
+    "data_dir = os.path.join(path.parents[0], \"data-files\")\n",
+    "with open(os.path.join(data_dir, \"data.json\")) as f:\n",
+    "    data = json.load(f)\n",
     "\n",
     "# get data (the structured data which Malte processed into lines with metadata)\n",
-    "sf = open('studies_on_water_scraped.json')\n",
-    "raw_data = json.load(sf)"
+    "with open(os.path.join(data_dir, \"studies_on_water_scraped.json\")) as sf:\n",
+    "    raw_data = json.load(sf)"
    ]
   },
   {
@@ -108,22 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "2c339fe7-a177-4425-85d1-3f1fc434d39c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from preprocessing import preprocess_ner\n",
-    "\n",
-    "# stopwords (niche irrelevant characters)\n",
-    "irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev','fe',\n",
-    "                            'page', 'pp', 'p', 'er', 'doi', 'b', 'c', 'd', 'e',\n",
-    "                            'f', 'g', 'h', 'j', 'k', 'l', 'm', 'n', 'o', 'q', 'r', 's',\n",
-    "                            't', 'u', 'v', 'w', 'y', 'z','www', 'com', 'org', 'de', 'dx', 'th', 'ii', 'le']\n",
+    "from preprocessing import preprocess_ner, lookup_correct_docid\n",
     "\n",
     "# preprocess data\n",
     "for key in data:\n",
-    "    data[key] = preprocess_ner(data[key], irrelevant_tokens)"
+    "    data[key] = preprocess_ner(data[key], stopwords=None)"
    ]
   },
   {
@@ -138,19 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "b7647a06-b78c-45a5-91a0-5afceb3b327f",
    "metadata": {
     "id": "b7647a06-b78c-45a5-91a0-5afceb3b327f"
    },
    "outputs": [],
    "source": [
-    "# define function to lookup correct ID for document in studies_on_water_scraped.json\n",
-    "# before this, I was using the INDEX of the document in the JSON array of this file as its ID.\n",
-    "def lookup_correct_docid(old_key):\n",
-    "    global raw_data\n",
-    "    return raw_data[int(old_key)]['meta']['id']\n",
-    "\n",
     "# function to split sentence list into chunks for batch processing by GPU\n",
     "def split(list_a, chunk_size):\n",
     "    for i in range(0, len(list_a), chunk_size):\n",
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "f7dfd99a-1cb8-4adb-80b3-847fd5385b4e",
    "metadata": {
     "colab": {
@@ -217,10 +210,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Started entire run at:- 2022-10-20 09:53:07.350106\n",
+      "Started entire run at:- 2022-10-25 18:22:55.767029\n",
       "---\n",
       "\n",
-      "Started processing Doc (29-31 / 55) at:- 2022-10-20 09:53:07.350705\n"
+      "Started processing Doc (1 / 55) -> DOC ID: 31 at:- 2022-10-25 18:22:55.767244\n"
      ]
     },
     {
@@ -245,9 +238,9 @@
     "idx = 1\n",
     "for key in data:\n",
     "    ct = datetime.datetime.now()\n",
-    "    print(\"Started processing Doc (\" + idx + \" / \" + \"55) -> DOC ID: \" + str(lookup_correct_docid(key)) + \" at:-\", ct)\n",
+    "    print(\"Started processing Doc (\" + str(idx) + \" / \" + \"55) -> DOC ID: \" + str(lookup_correct_docid(key)) + \" at:-\", ct)\n",
     "    ner_results = flair_ner(data[key], flair_18class, lookup_correct_docid(key))\n",
-    "    write_results_to_file(ner_results, 'data-files/master-ner-results.csv')\n",
+    "    write_results_to_file(ner_results, os.path.join(data_dir, \"master-ner-results.csv\"))\n",
     "    ct = datetime.datetime.now()\n",
     "    print(\"Finished doc at:-\", ct)\n",
     "    idx += 1\n",
@@ -257,6 +250,22 @@
     "print(\"---\")\n",
     "print(\"Finished entire run at:-\", ct)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ec43aad-40f1-44ea-9eba-1f868d5f7608",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dac5037-f414-4a9c-be26-98f89d159853",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
