--- a/2 - cluster organisations and link them to the STM topics/clustering.ipynb
+++ b/2 - cluster organisations and link them to the STM topics/clustering.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6ccc07ce-dac5-4250-8b8f-9c557b222742",
    "metadata": {},
    "outputs": [
@@ -122,9 +122,14 @@
     "import plotly.offline as pyo\n",
     "import plotly.graph_objs as go\n",
     "pyo.init_notebook_mode()\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "path = Path(os.getcwd())\n",
+    "data_dir = os.path.join(path.parents[0], \"data-files\")\n",
     "\n",
     "# import master ner dataset\n",
-    "df = pd.read_csv('../data-files/master-ner-results-singletokens.csv')\n",
+    "df = pd.read_csv(os.path.join(data_dir, \"master-ner-results-singletokens.csv\"))\n",
     "# only organisations\n",
     "orgs_df = df[df['entity_type'] == 'ORG'] \n",
     "# filter only the most frequently mentioned organistions\n",
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b1ecb0ce-5b52-4b46-aa92-51e775987e99",
    "metadata": {},
    "outputs": [],
@@ -152,13 +157,13 @@
     "# filepath_200_20 = '/Users/kodymoodley/Documents/nlesc-projects/disaster-capitalism/embeddings/models/gensim-oecd-word2vec-200-20.model'\n",
     "# d_testmodel = gensim.models.Word2Vec.load(filepath_200_20)\n",
     "# load chosen model: vector size - 100, window size - 20 \n",
-    "filepath_100_20 = '../models/gensim-oecd-word2vec-100-20.model'\n",
+    "filepath_100_20 = os.path.join(os.path.join(path.parents[0],\"models\"), \"gensim-oecd-word2vec-100-20.model\")\n",
     "c_testmodel = gensim.models.Word2Vec.load(filepath_100_20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "fb3d6841-fcbf-471f-bca8-2c857006f049",
    "metadata": {},
    "outputs": [
@@ -193,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d0cc742f-aa7d-49c7-9aa0-65cde651eafc",
    "metadata": {},
    "outputs": [],
@@ -317,7 +322,7 @@
     "layout_all_3d = go.Layout(title='OECD actor clusters - ORGs - 3D', autosize=False, width=1000, height=1000)\n",
     "fig_all_3d = go.Figure(data=plot_all_3d, layout=layout_all_3d)\n",
     "pyo.iplot(fig_all_3d) \n",
-    "fig_all_3d.write_html(\"../data-files/cluster-plots/actors-3d-orgs.html\")"
+    "fig_all_3d.write_html(os.path.join(os.path.join(data_dir, \"cluster-plots\"), \"actors-3d-orgs.html\"))"
    ]
   },
   {
@@ -338,7 +343,7 @@
     "layout_all_2d = go.Layout(title='OECD actor clusters - ORGs - 2D',autosize=False, width=1000, height=1000)\n",
     "fig_all_2d = go.Figure(data=plot_all_2d, layout=layout_all_2d)\n",
     "pyo.iplot(fig_all_2d) \n",
-    "fig_all_2d.write_html(\"../data-files/cluster-plots/actors-2d-orgs.html\")"
+    "fig_all_2d.write_html(os.path.join(os.path.join(data_dir, \"cluster-plots\"), \"actors-2d-orgs.html\"))"
    ]
   },
   {
@@ -353,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "903e31d2-aa9f-449b-a4a1-1335057ae2cb",
    "metadata": {},
    "outputs": [],
@@ -407,12 +412,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "0f8d08af-fe88-4a36-8492-1f61a075dc0c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "name\t\t:\t south_africa\n",
+      "\n",
+      "types\t\t:\t ['GPE']\n",
+      "\n",
+      "documents\t:\t [9]\n",
+      "\n",
+      "contexts\t:\t 1. by bilateral donors, such as the aFD in Morocco and south africa but they are yet to apply those principles on a\n",
+      "\t\t\t 2. Partial credit guarantees (Pcgs) to the city of Johannesburg in south africa (Box .) or to the tlalnepantla water project in Mexico\n",
+      "\t\t\t 3. continent, however, the only credit rating agencies are located in south africa and nigeria, the two largest markets in the region.\n",
+      "\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "result = get_more_info_about_entity('agência_nacional_águas')\n",
+    "result = get_more_info_about_entity('south_africa')\n",
     "print(pretty_print_entity_info(result))"
    ]
   },
@@ -481,7 +505,7 @@
     "    clusters[item[0]].append(item[1])\n",
     "    \n",
     "import json\n",
-    "with open('../data-files/clustering-data/kmeans_clusters8.json', 'w') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans_clusters8.json\"), 'w') as fp:\n",
     "    json.dump(clusters, fp)"
    ]
   },
@@ -503,8 +527,8 @@
    "source": [
     "# filter clusters only for ORGS\n",
     "orgs = orgs_df['entity_as_single_token'].value_counts().index.tolist()\n",
-    "file1 = open('../data-files/replace_stopwords_orgs.txt', 'r')\n",
-    "other_stopwords = file1.readlines()\n",
+    "with open(os.path.join(data_dir, \"replace_stopwords_orgs.txt\"), 'r') as file1:\n",
+    "    other_stopwords = file1.readlines()\n",
     "other_stopwords2 = []\n",
     "for item in other_stopwords:\n",
     "    other_stopwords2.append(item.replace('\\n',''))\n",
@@ -565,7 +589,7 @@
     "    if len(orgs_clusters[key]) == 0:\n",
     "        del orgs_clusters[key]\n",
     "    \n",
-    "with open('../data-files/clustering-data/kmeans_clusters8_orgs.json', 'w') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans_clusters8_orgs.json\"), 'w') as fp:\n",
     "    json.dump(orgs_clusters, fp)"
    ]
   },
@@ -613,7 +637,7 @@
     "for key in orgs_clusters:\n",
     "    topn_orgs_clusters[key] = find_top_n(orgs_clusters[key], 30)\n",
     "    \n",
-    "with open('../data-files/clustering-data/kmeans_clusters8_orgs_topn.json', 'w') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans_clusters8_orgs_topn.json\"), 'w') as fp:\n",
     "    json.dump(topn_orgs_clusters, fp)  "
    ]
   },
@@ -713,7 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stm_topics_df = pd.read_csv('../data-files/stm_final_topic_labels.csv', sep=';')\n",
+    "stm_topics_df = pd.read_csv(os.path.join(data_dir, \"stm_final_topic_labels.csv\"), sep=';')\n",
     "results_dict = map_topics_words_to_word2vec_vocab(stm_topics_df)"
    ]
   },
@@ -725,7 +749,7 @@
    "outputs": [],
    "source": [
     "import json \n",
-    "with open('../data-files/oecd_stm_themes.json', 'r') as fp:\n",
+    "with open(os.path.join(data_dir, \"oecd_stm_themes.json\"), 'r') as fp:\n",
     "    themes_dict = json.load(fp)\n",
     "    \n",
     "results8 = {}\n",
@@ -742,10 +766,10 @@
     "        if key in nums:\n",
     "            results8[item].extend(curr_words)\n",
     "\n",
-    "with open('../data-files/clustering-data/stm_topics_word2vec_vocab_prob.json', 'w') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"stm_topics_word2vec_vocab_prob.json\"), 'w') as fp:\n",
     "    json.dump(results_dict, fp)\n",
     "\n",
-    "with open('../data-files/clustering-data/stm_8topics_word2vec_vocab_prob.json', 'w') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"stm_8topics_word2vec_vocab_prob.json\"), 'w') as fp:\n",
     "    json.dump(results8, fp)"
    ]
   },
@@ -758,7 +782,7 @@
    "source": [
     "similarity_results = {}\n",
     "\n",
-    "with open('../data-files/clustering-data/kmeans_clusters8_orgs.json', 'r') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans_clusters8_orgs.json\"), 'r') as fp:\n",
     "    topn_orgs_clusters = json.load(fp) \n",
     "    \n",
     "for topic_key in results8: # for each topic\n",
@@ -778,7 +802,7 @@
     "            \n",
     "    similarity_results[item]['highest'] = highest_subitem\n",
     "    \n",
-    "with open('../data-files/clustering-data/stm_topics_vs_org_clusters_kmeans8v8.json', 'w') as fp:\n",
+    "with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"stm_topics_vs_org_clusters_kmeans8v8.json\"), 'w') as fp:\n",
     "    json.dump(similarity_results, fp)"
    ]
   },
@@ -840,10 +864,11 @@
     "def generate_network_from_kmeans_topics_comparison_data():\n",
     "    edges = []\n",
     "    nodes = []\n",
-    "    with open(\"../data-files/clustering-data/stm_topics_vs_org_clusters_kmeans8v8.json\", \"r\") as f:\n",
+    "    \n",
+    "    with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"stm_topics_vs_org_clusters_kmeans8v8.json\"), \"r\") as f:\n",
     "        matching_orgs_for_topics_data = json.load(f)\n",
     "        \n",
-    "    with open(\"../data-files/clustering-data/kmeans_clusters8_orgs_topn.json\", \"r\") as f:\n",
+    "    with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans_clusters8_orgs_topn.json\"), \"r\") as f:\n",
     "        topn_orgs_clusters_data = json.load(f)\n",
     "        \n",
     "    for key in matching_orgs_for_topics_data:\n",
@@ -854,12 +879,12 @@
     "            nodes.append((org, org))\n",
     "            edges.append((key, org))\n",
     "         \n",
-    "    with open('../data-files/clustering-data/kmeans-network-edges-only.csv','w') as out:\n",
+    "    with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans-network-edges-only.csv\"), 'w') as out:\n",
     "        csv_out=csv.writer(out)\n",
     "        csv_out.writerow(['Source','Target'])\n",
     "        csv_out.writerows(edges)\n",
     "\n",
-    "    with open('../data-files/clustering-data/kmeans-network-nodes-only.csv','w') as out2:\n",
+    "    with open(os.path.join(os.path.join(data_dir, \"clustering-data\"), \"kmeans-network-nodes-only.csv\"), 'w') as out2:\n",
     "        csv_out2=csv.writer(out2)\n",
     "        csv_out2.writerow(['Id','Label'])\n",
     "        csv_out2.writerows(list(set(nodes)))\n",
