--- a/2 - cluster organisations and link them to the STM topics/word2vec-embeddings.ipynb
+++ b/2 - cluster organisations and link them to the STM topics/word2vec-embeddings.ipynb
@@ -38,6 +38,12 @@
     }
    ],
    "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "path = Path(os.getcwd())\n",
+    "models_dir = os.path.join(path.parents[0], \"models\")\n",
+    "\n",
     "from preprocessing import replace_ngrams_with_unigrams_curated_phrases, preprocess_word2vec\n",
     "\n",
     "# replace ngrams with single tokens\n",
@@ -181,14 +187,14 @@
     "import tempfile\n",
     "\n",
     "with tempfile.NamedTemporaryFile(delete=False) as tmp:\n",
-    "    filepath_200_10 = '../models/gensim-oecd-word2vec-200-10.model'\n",
-    "    filepath_200_20 = '../models/gensim-oecd-word2vec-200-20.model'\n",
-    "    filepath_200_30 = '../models/gensim-oecd-word2vec-200-30.model'\n",
-    "    filepath_100_10 = '../models/gensim-oecd-word2vec-100-10.model'\n",
-    "    filepath_100_20 = '../models/gensim-oecd-word2vec-100-20.model'\n",
-    "    filepath_100_30 = '../models/gensim-oecd-word2vec-100-30.model'\n",
-    "    filepath_200_40_30 = '../models/gensim-oecd-word2vec-200-40-30.model'\n",
-    "    filepath_100_40_30 = '../models/gensim-oecd-word2vec-100-40-30.model'\n",
+    "    filepath_200_10 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-10.model')\n",
+    "    filepath_200_20 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-20.model')\n",
+    "    filepath_200_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-30.model')\n",
+    "    filepath_100_10 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-10.model')\n",
+    "    filepath_100_20 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-20.model')\n",
+    "    filepath_100_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-30.model')\n",
+    "    filepath_200_40_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-200-40-30.model')\n",
+    "    filepath_100_40_30 = os.path.join(models_dir, 'gensim-oecd-word2vec-100-40-30.model')\n",
     "    model_200_10.save(filepath_200_10)\n",
     "    model_200_20.save(filepath_200_20)\n",
     "    model_200_30.save(filepath_200_30)\n",
