--- a/3 - generate a network of organisations using SRL/oecd_semantic_role_labelling.ipynb
+++ b/3 - generate a network of organisations using SRL/oecd_semantic_role_labelling.ipynb
@@ -36,8 +36,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Error loading punkt: <urlopen error [Errno 8] nodename nor\n",
-      "[nltk_data]     servname provided, or not known>\n"
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/kodymoodley/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
@@ -51,6 +52,11 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "nltk.download('punkt')\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "path = Path(os.getcwd())\n",
+    "data_dir = os.path.join(path.parents[0], \"data-files\")\n",
     "\n",
     "stop_words = set(stopwords.words('english'))  \n",
     "irrelevant_tokens = ['et', 'al.', 'x', 'pdf', 'yes', 'abbrev','also','fe',\n",
@@ -63,7 +69,7 @@
     "stop_words_list.extend(list(irrelevant_tokens))\n",
     "stop_words_list = list(set(stop_words_list))\n",
     "\n",
-    "with open('../data-files/processed_ngram_ner_data.json', encoding='utf-8') as f:\n",
+    "with open(os.path.join(data_dir, \"processed_ngram_ner_data.json\"), encoding='utf-8') as f:\n",
     "    datajson = json.load(f)\n",
     "\n",
     "corpus = ''\n",
@@ -74,8 +80,8 @@
     "    corpus_doclist.append(' '.join(filtered_doc))\n",
     "    corpus += datajson[key] + ' '\n",
     "    \n",
-    "f = open('../data-files/ngram_replacements.json')\n",
-    "ngram_replacements = json.load(f)\n",
+    "with open(os.path.join(data_dir, \"ngram_replacements.json\")) as f:\n",
+    "    ngram_replacements = json.load(f)\n",
     "        \n",
     "def replace_all(text, dic):\n",
     "    for i, j in dic.items():\n",
@@ -99,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "F5GuJEMkiqjp"
    },
@@ -117,7 +123,7 @@
    "source": [
     "# save corpus to file\n",
     "import pickle\n",
-    "with open('../data-files/srl_corpus.pkl', 'wb') as f:\n",
+    "with open(os.path.join(data_dir, \"srl_corpus.pkl\"), 'wb') as f:\n",
     "    pickle.dump(processed_sentences, f)"
    ]
   },
@@ -137,7 +143,7 @@
    "outputs": [],
    "source": [
     "# import pickle\n",
-    "# with open('../data-files/srl_corpus.pkl', 'rb') as f:\n",
+    "# with open(os.path.join(data_dir, \"srl_corpus.pkl\"), 'rb') as f:\n",
     "#     processed_sentences = pickle.load(f)"
    ]
   },
@@ -328,7 +334,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "with open('../data-files/srl_predictions_big.pkl', 'wb') as f:\n",
+    "with open(os.path.join(data_dir, \"srl_predictions_big.pkl\"), 'wb') as f:\n",
     "    pickle.dump(preds_list, f)"
    ]
   },
@@ -340,7 +346,7 @@
    },
    "outputs": [],
    "source": [
-    "# with open('../data-files/srl_predictions_big.pkl', 'rb') as f:\n",
+    "# with open(os.path.join(data_dir, \"srl_predictions_big.pkl\"), 'rb') as f:\n",
     "#     srl_results = pickle.load(f)"
    ]
   },
